Added Paragraph in About

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
     <div class="main-content">
         {{>header}}
         <img class="portrait" src="/img/me.png">
+        <p>This app is created by Nadim Ansari. It is uses Mapbox and Wether Stack</p>
     </div>
     
     {{>footer}}
